--- a/admin/assets/sass/settings.scss
+++ b/admin/assets/sass/settings.scss
@@ -53,3 +53,29 @@
 	max-width:270px;
 	float:right;
 }
+
+.cmb2-metabox.cmb-field-list .cmb-row.cmb-type-title {
+	padding: 8px 12px;
+	margin: 0;
+	margin-top:10px;
+	line-height: 1.4;
+	border: 1px solid #e5e5e5;
+	border-bottom: 1px solid #eee;
+}
+.cmb2-metabox.cmb-field-list .cmb-row {
+	background: #fff;
+	box-shadow: 0 1px 1px rgba(0,0,0,0.04);
+	padding: 0 12px;        
+	border: 1px solid #e5e5e5;
+	margin-top:-1px;
+}
+.cmb2-metabox.cmb-field-list .cmb-th {
+	font-weight: initial;
+}
+.cmb2-metabox.cmb-field-list .cmb2-metabox-title {
+	margin: 0;
+	padding:0;
+}
+.cmb-form .button-primary {
+    margin-top: 20px;
+}
